# SolarLab

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  perovskite_sim_technical_details.pptx  skills-lock.json
perovskite-sim/: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  README.md  pyproject.toml
perovskite-sim/backend/: README.md  api_schema.py  celery_app.py  jobs.py  main.py  progress.py  requirements.txt  test_e2e_api.py  user_configs.py
perovskite-sim/configs/: cSi_homojunction.yaml  cigs_baseline.yaml  cigs_graded_notch.yaml  driftfusion_benchmark.yaml  driftfusion_benchmark_tmm.yaml  driftfusion_calado2016_repro.yaml  field_mobility_demo.yaml  ionmonger_benchmark.yaml  ionmonger_benchmark_tmm.yaml  ionmonger_courtier2019_repro.yaml  nip_MAPbI3.yaml  nip_MAPbI3_tmm.yaml  nip_SnPb_1p22.yaml  nip_wideGap_FACs_1p77.yaml  pin_MAPbI3.yaml  pin_MAPbI3_tmm.yaml  radiative_limit.yaml  scaps_mirror.yaml  scaps_mirror_v2.yaml  scaps_mirror_v2_robin_moderate.yaml  scaps_mirror_v2_robin_strong.yaml  selective_contacts_demo.yaml  solarscale_nip_band_aligned.yaml  tandem_lin2019.yaml
perovskite-sim/docs/: benchmark_analysis.md  benchmark_plan.md  benchmark_results_example.md  solarlab-explorer.html
perovskite-sim/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
perovskite-sim/notebooks/: 01_jv_hysteresis.ipynb  02_impedance.ipynb  03_degradation.ipynb  04_ionmonger_benchmark.py  05_comprehensive_benchmark.py  06_e2e_notebook_vs_api.py  07_phase2_characterisation_benchmark.py  (+1 more)
(+1263 files in other folders)
